<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <Spinner 
        android:id="@+id/devices_spinner"
        android:contentDescription="@string/device_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_centerHorizontal="true" />
    
    <TextView
        android:id="@+id/pre_text_view"
        android:contentDescription="@string/pre_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_below="@+id/devices_spinner" 
        android:layout_margin="10sp" />
    
    <TextView
        android:id="@+id/bloom_text_view"
        android:contentDescription="@string/bloom_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_toRightOf="@+id/pre_text_view" 
        android:layout_below="@+id/devices_spinner"
        android:layout_margin="10sp" />
    
    <TextView
        android:id="@+id/brew_text_view"
        android:contentDescription="@string/brew_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_toRightOf="@+id/bloom_text_view" 
        android:layout_below="@+id/devices_spinner"
        android:layout_margin="10sp" />
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/hello_world" 
        android:layout_margin="10sp" />

</RelativeLayout>