<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
   android:layout_width="match_parent" 
   android:layout_height="wrap_content" android:layout_weight="1">
   <TableLayout android:layout_width="match_parent" 
      android:layout_height="wrap_content"
      android:stretchColumns="1" android:layout_margin="5dp">
      <TableRow android:id="@+id/nameTableRow"
         android:layout_width="match_parent" 
         android:layout_height="wrap_content">
         <TextView android:id="@+id/nameLabelTextView" 
            style="@style/LogLabelTextView"
            android:text="@string/label_name"></TextView>
         <TextView android:id="@+id/nameTextView" 
            style="@style/LogTextView"></TextView>
      </TableRow>

      <TableRow android:id="@+id/phoneTableRow"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView android:id="@+id/phoneLabelTextView" 
            style="@style/LogLabelTextView"
            android:text="@string/label_phone"></TextView>
         <TextView android:id="@+id/phoneTextView"
            style="@style/LogTextView"></TextView>
      </TableRow>

      <TableRow android:id="@+id/emailTableRow"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView android:id="@+id/emailLabelTextView" 
            style="@style/LogLabelTextView"
            android:text="@string/label_email"></TextView>
         <TextView android:id="@+id/emailTextView"
            style="@style/LogTextView"></TextView>
      </TableRow>

      <TableRow android:id="@+id/streetTableRow"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView android:id="@+id/streetLabelTextView" 
            style="@style/LogLabelTextView"
            android:text="@string/label_street"></TextView>
         <TextView android:id="@+id/streetTextView"
            style="@style/LogTextView"></TextView>
      </TableRow>

      <TableRow android:id="@+id/cityTableRow"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView android:id="@+id/cityLabelTextView" 
            style="@style/LogLabelTextView"
            android:text="@string/label_city"></TextView>
         <TextView android:id="@+id/cityTextView"
            style="@style/LogTextView"></TextView>
      </TableRow>
   </TableLayout>
</ScrollView>
