<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:id="@+id/device_name"
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="20sp"/>
    
    <LinearLayout 
        android:id="@+id/pre_time_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        
        <TextView 
            android:id="@+id/pre_slider_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:paddingLeft="50dp"
            android:textSize="20sp"/>
        
        <TextView 
            android:id="@+id/pre_slider_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:paddingLeft="50dp"
            android:textSize="20sp"/>
        
    </LinearLayout>
    
    <SeekBar 
        android:id="@+id/pre_seek_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_gravity="center_horizontal"
        android:max="300"/>
    
    <LinearLayout 
        android:id="@+id/bloom_time_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        
        <TextView 
            android:id="@+id/bloom_slider_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:paddingLeft="50dp"
            android:textSize="20sp"/>
        
        <TextView 
            android:id="@+id/bloom_slider_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:paddingLeft="50dp"
            android:textSize="20sp"/>
        
    </LinearLayout>
    
    <SeekBar 
        android:id="@+id/bloom_seek_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_gravity="center_horizontal"
        android:max="300"/>

    <LinearLayout 
        android:id="@+id/brew_time_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        
        <TextView 
            android:id="@+id/brew_slider_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:paddingLeft="50dp"
            android:textSize="20sp"/>
        
        <TextView 
            android:id="@+id/brew_slider_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:paddingLeft="50dp"
            android:textSize="20sp"/>
        
    </LinearLayout>
    
    <SeekBar 
        android:id="@+id/brew_seek_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_gravity="center_horizontal"
        android:max="300"/>
    
    <LinearLayout 
        android:id="@+id/button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"> 
    
        <Button 
            android:id="@+id/cancel_settings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_margin="20dp"
            android:text="@string/cancel_settings_button"/>
        	
        <Button 
            android:id="@+id/reset_settings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_margin="20dp"
            android:text="@string/reset_settings_button"/>
        
        <Button 
            android:id="@+id/save_settings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_margin="20dp"
            android:text="@string/save_settings_button"/>
        
    </LinearLayout>
    
</LinearLayout>





